Added log files to check the errors and also removed lazy loading.